--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                     </div>
                 </div>
-                <iframe  width="425" height="344" src="https://www.youtube.com/watch?v=t6lRXn-WKjs&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/t6lRXn-WKjs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <!-- Projects-->
