--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">BUENAS NOCHES A TODOS</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">'Bienvenidos a mi proyecto del modulo Tecnologias Informaticas'</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">'Bienvenidos a mi pagina web del modulo de Tecnologias Informaticas'</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">INICIAR</a>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">EDUCACION VIRTUAL</h2>
                         <p class="text-white-50">
-                            La Universidad UDABOL por la situacion de la pandemia lleva una educación virtual
+                            La Universidad UDABOL por la situacion de la pandemia lleva una educación virtual, en algunos casos los estudiantes suben videos a la plataforma youtube para aportar con sus conocimientos a muchas personas.
                         </p>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+                        <h2 class="text-white mb-5">Subscribete para saber más</h2>
                         <form class="form-inline d-flex">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
                             <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>
@@ -125,9 +125,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
+                                <h4 class="text-uppercase m-0">Dirección</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Capital Ravelo La Paz</div>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">salvarez5-es@udabol.edu.bo</a></div>
                             </div>
                         </div>
                     </div>
@@ -145,9 +145,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
+                                <h4 class="text-uppercase m-0">Telefono</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">+591 74029081</div>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Steohanie Alvarez 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Stephanie Alvarez 2020</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
