--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Tipos de tecnologías</h4>
-                                    <p class="mb-0 text-white-50">Tecnología Fija,Flexible,Blanda,Dura,De Equipo, De Operación y Limpia</p>
+                                    <p class="mb-0 text-white-50">En el entorno actual, donde es difícil concebir a la sociedad sin tecnología, una empresa,institución u organización que no tenga implementada tecnología dentro sus procesos y no aproveche los beneficios de esta, esta predestinada a quedar atrás en el mercado y posiblemente a desaparecer.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
